Fix: `TokenCard`, `ColonyFundingBanner` missing colors

--- a/src/components/common/ColonyFundingBanner/ColonyFundingBanner.css
+++ b/src/components/common/ColonyFundingBanner/ColonyFundingBanner.css
@@ -2,7 +2,7 @@
 
 .main {
   padding: 30px 0 0;
-  border-top: 1px solid var(--temp-grey-5);
+  border-top: 1px solid var(--light-grey);
   font-size: var(--size-normal);
   text-align: center;
 }
