--- a/src/components/common/TokenCard/TokenCard.css
+++ b/src/components/common/TokenCard/TokenCard.css
@@ -47,12 +47,12 @@
 }
 
 .tokenLockWrapper svg {
-  fill: var(--grey-3);
+  fill: var(--grey-purple);
 }
 
 .nativeTokenText {
   margin-left: 3px;
-  color: var(--grey-3);
+  color: var(--grey-purple);
 }
 
 .balanceContent {
@@ -79,7 +79,7 @@
   align-items: flex-end;
   height: headerFooterHeights;
   font-weight: var(--weight-thin);
-  color: var(--grey-3);
+  color: var(--grey-purple);
 }
 
 .ethUsdText {
